[package]
name = "rtos-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal-async = "1.0"
embedded-io-async = "0.6"

[features]
default = []
partition-debug = []
mock-hal = []
std = []
intra-threads = []
# StaticIsrRing single-core/multi-core gating (matches kernel features).
multi-core = []
single-core = []
