[package]
name = "f207"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", default-features = false }
rtt-target = "0.6"
panic-rtt-target = "0.2"
kernel = { path = "../../kernel/kernel", optional = true }
plib = { path = "../../kernel/plib", optional = true }
heapless = { version = "0.8", optional = true }

[features]
default = []
uses-kernel = ["dep:kernel", "kernel/log-rtt", "kernel/panic-tombstone", "kernel/debug-no-wfi"]
kernel-example = ["uses-kernel", "dep:plib", "dep:heapless"]
kernel-mpu = ["kernel-example", "dep:plib"]
qemu = []
partition-debug = []

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
debug = 2
panic = "abort"

[[example]]
name = "rtt_hello"
required-features = []

[[example]]
name = "mpu_kernel_demo"
required-features = ["kernel-mpu"]

[[example]]
name = "stochastic_fault_m3"
required-features = ["kernel-mpu"]

[[example]]
name = "tiny_kernel"
required-features = ["kernel-mpu"]
