[package]
name = "lm3s"
version = "0.1.0"
edition = "2024"

[dependencies]
rtos-traits = { path = "../../rtos-traits" }
embedded-hal = { version = "0.2" }

[features]
default = []
mock-hal = ["rtos-traits/mock-hal"]

[dev-dependencies]
rtos-traits = { path = "../../rtos-traits", features = ["mock-hal"] }
