[package]
name = "lm3s"
version = "0.1.0"
edition = "2024"

[dependencies]
rtos-traits = { path = "../../rtos-traits" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
embedded-hal = { version = "0.2" }
heapless = "0.8"

[features]
default = []
mock-hal = ["rtos-traits/mock-hal"]

[dev-dependencies]
rtos-traits = { path = "../../rtos-traits", features = ["mock-hal"] }
